:bug: fix wrong font

--- a/themes/ivy/assets/css/fonts.css
+++ b/themes/ivy/assets/css/fonts.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Meslo, Monaco, Consolas, "Ubuntu Mono", monospace, 'source-han-serif-sc', 'Source Han Serif SC', 'Source Han Serif CN', 'Source Han Serif TC', 'Source Han Serif TW', 'Source Han Serif', 'Songti SC', 'Microsoft YaHei', sans-serif;
+  font-family: Meslo, "Source Code Pro", 'Noto Serif SC', Monaco, Consolas, "Noto Serif SC", "Ubuntu Mono", 'source-han-serif-sc', 'Source Han Serif SC', 'Source Han Serif CN', 'Source Han Serif TC', 'Source Han Serif TW', 'Source Han Serif', 'Songti SC', 'Microsoft YaHei', sans-serif;
 }
 code {
   font-family: "Fira Code", "Lucida Console", 'Andale Mono', 'STKaiti', 'KaiTi', 'SimKai', monospace;
